--- a/libstdc++-v3/contrib/libstdc++-v3-12/ChangeLog
+++ b/libstdc++-v3/contrib/libstdc++-v3-12/ChangeLog
@@ -1,3 +1,549 @@
+2023-05-11  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-11-16  Jonathan Wakely  <jwakely@redhat.com>
+
+	* python/libstdcxx/v6/printers.py (StdExpAnyPrinter): Make
+	expansion of std::string in manager name more robust.
+
+2023-05-08  Release Manager
+
+	* GCC 12.3.0 released.
+
+2023-05-03  Kefu Chai  <kefu.chai@scylladb.com>
+
+	Backported from master:
+	2023-05-03  Kefu Chai  <kefu.chai@scylladb.com>
+		    Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/109703
+	* include/bits/basic_string.h (basic_string(Iter, Iter, Alloc)):
+	Initialize _M_string_length.
+
+2023-05-03  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-04-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	* doc/doxygen/user.cfg.in (STRIP_FROM_PATH): Remove prefixes
+	from header paths.
+
+2023-04-29  Patrick Palka  <ppalka@redhat.com>
+
+	Backported from master:
+	2023-04-12  Patrick Palka  <ppalka@redhat.com>
+
+	* include/std/ranges (lazy_split_view::_OuterIter::_OuterIter):
+	Propagate _M_trailing_empty in the const-converting constructor
+	as per LWG 3904.
+	* testsuite/std/ranges/adaptors/lazy_split.cc (test12): New test.
+
+2023-04-29  Patrick Palka  <ppalka@redhat.com>
+
+	Backported from master:
+	2023-03-14  Patrick Palka  <ppalka@redhat.com>
+
+	* include/bits/stl_iterator.h (move_iterator::_S_iter_concept):
+	Define.
+	(__cpp_lib_move_iterator_concept): Define for C++20.
+	(move_iterator::iterator_concept): Strengthen as per P2520R0.
+	* include/std/version (__cpp_lib_move_iterator_concept): Define
+	for C++20.
+	* testsuite/24_iterators/move_iterator/p2520r0.cc: New test.
+
+2023-04-29  Patrick Palka  <ppalka@redhat.com>
+
+	Backported from master:
+	2023-03-09  Patrick Palka  <ppalka@redhat.com>
+
+	PR libstdc++/108362
+	* include/std/ranges (__detail::__can_single_view): New concept.
+	(_Single::operator()): Constrain it.  Move [[nodiscard]] to the
+	end of the function declarator.
+	(__detail::__can_iota_view): New concept.
+	(_Iota::operator()): Constrain it.  Move [[nodiscard]] to the
+	end of the function declarator.
+	(__detail::__can_istream_view): New concept.
+	(_Istream::operator()): Constrain it.  Move [[nodiscard]] to the
+	end of the function declarator.
+	* testsuite/std/ranges/iota/lwg3292_neg.cc: Prune "in
+	requirements" diagnostic.
+	* testsuite/std/ranges/iota/iota_view.cc (test07): New test.
+	* testsuite/std/ranges/istream_view.cc (test08): New test.
+	* testsuite/std/ranges/single_view.cc (test07): New test.
+
+2023-04-28  Patrick Palka  <ppalka@redhat.com>
+
+	Backported from master:
+	2023-04-24  Patrick Palka  <ppalka@redhat.com>
+
+	* include/bits/max_size_type.h (__max_diff_type::operator>>=):
+	Fix propagation of sign bit.
+	* testsuite/std/ranges/iota/max_size_type.cc: Avoid using the
+	non-standard 'signed typedef-name'.  Add some compile-time tests
+	for right-shifting a negative __max_diff_type value by more than
+	one.
+
+2023-04-27  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/std/atomic: Add missing @endcond doxygen comment.
+
+2023-04-27  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-11-25  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/107850
+	* include/bits/erase_if.h (__erase_nodes_if): Use non-const
+	reference to the container.
+	* include/experimental/map (erase_if): Likewise.
+	* include/experimental/set (erase_if): Likewise.
+	* include/experimental/unordered_map (erase_if): Likewise.
+	* include/experimental/unordered_set (erase_if): Likewise.
+	* include/std/map (erase_if): Likewise.
+	* include/std/set (erase_if): Likewise.
+	* include/std/unordered_map (erase_if): Likewise.
+	* include/std/unordered_set (erase_if): Likewise.
+	* testsuite/23_containers/map/erasure.cc: Check with
+	const-incorrect predicate.
+	* testsuite/23_containers/set/erasure.cc: Likewise.
+	* testsuite/23_containers/unordered_map/erasure.cc: Likewise.
+	* testsuite/23_containers/unordered_set/erasure.cc: Likewise.
+	* testsuite/experimental/map/erasure.cc: Likewise.
+	* testsuite/experimental/set/erasure.cc: Likewise.
+	* testsuite/experimental/unordered_map/erasure.cc: Likewise.
+	* testsuite/experimental/unordered_set/erasure.cc: Likewise.
+
+2023-04-27  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-11-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	* testsuite/26_numerics/random/subtract_with_carry_engine/cons/lwg3809.cc:
+	Replace non-ASCII character.
+
+2023-04-27  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-02-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/108952
+	* include/bits/uses_allocator_args.h
+	(uses_allocator_construction_args): Implement LWG 3527.
+	* testsuite/20_util/pair/astuple/get-2.cc: New test.
+	* testsuite/20_util/scoped_allocator/108952.cc: New test.
+	* testsuite/20_util/uses_allocator/lwg3527.cc: New test.
+
+2023-04-27  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-03-31  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/109339
+	* include/std/stop_token (_Stop_state_ptr(const stop_source&)):
+	Add attribute access with access-mode 'none'.
+	* testsuite/30_threads/stop_token/stop_source/109339.cc: New test.
+
+2023-04-27  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-11-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/107466
+	* include/bits/random.h (subtract_with_carry_engine): Use 32-bit
+	type for default seed. Use 0u as default argument for
+	subtract_with_carry_engine(result_type) constructor and
+	seed(result_type) member function.
+	* include/bits/random.tcc (subtract_with_carry_engine): Use
+	32-bit type for default seed and engine used for initial state.
+	* testsuite/26_numerics/random/subtract_with_carry_engine/cons/lwg3809.cc:
+	New test.
+
+2023-04-27  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-04-27  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/mofunc_impl.h: Fix typo in doxygen comment.
+
+2023-04-27  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-04-27  Jonathan Wakely  <jwakely@redhat.com>
+
+	* doc/doxygen/user.cfg.in (SOURCE_BROWSER): Only set to YES for
+	HTML docs.
+	* include/bits/gslice_array.h (_DEFINE_VALARRAY_OPERATOR): Omit
+	from doxygen docs.
+	* include/bits/indirect_array.h (_DEFINE_VALARRAY_OPERATOR):
+	Likewise.
+	* include/bits/mask_array.h (_DEFINE_VALARRAY_OPERATOR):
+	Likewise.
+	* include/bits/slice_array.h (_DEFINE_VALARRAY_OPERATOR):
+	Likewise.
+	* include/std/valarray (_DEFINE_VALARRAY_UNARY_OPERATOR)
+	(_DEFINE_VALARRAY_AUGMENTED_ASSIGNMENT)
+	(_DEFINE_VALARRAY_EXPR_AUGMENTED_ASSIGNMENT)
+	(_DEFINE_BINARY_OPERATOR): Likewise.
+
+2023-04-21  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/103755
+	* include/bits/locale_classes.tcc (try_facet, use_facet): Do not
+	check array index or dynamic type when accessing required
+	specializations of std::ctype, std::num_get, or std::num_put.
+	* testsuite/22_locale/ctype/is/string/89728_neg.cc: Adjust
+	expected errors.
+
+2023-04-20  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-11-29  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/107852
+	PR libstdc++/106199
+	PR libstdc++/100366
+	* include/bits/vector.tcc (vector::_M_fill_insert): Copy
+	_M_start and _M_finish members before allocating.
+	(vector::_M_default_append): Likewise.
+	(vector::_M_range_insert): Likewise.
+
+2023-04-20  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-04-04  Jonathan Wakely  <jwakely@redhat.com>
+
+	* doc/xml/manual/extensions.xml: Remove std::bad_exception from
+	example program.
+	* doc/html/manual/ext_demangling.html: Regenerate.
+
+2023-04-20  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-04-05  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/regex.h (sub_match::swap): New function.
+	* testsuite/28_regex/sub_match/lwg3204.cc: New test.
+
+2023-04-20  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/103387
+	* include/bits/istream.tcc (istream::_M_extract(ValueT&)): Use
+	std::use_facet instead of cached _M_num_get facet.
+	(istream::operator>>(short&)): Likewise.
+	(istream::operator>>(int&)): Likewise.
+	* include/bits/ostream.tcc (ostream::_M_insert(ValueT)): Use
+	std::use_facet instead of cached _M_num_put facet.
+
+2023-04-20  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-01-15  Jonathan Wakely  <jwakely@redhat.com>
+
+	* testsuite/30_threads/jthread/jthread.cc: Remove -pthread from
+	dg-options.
+
+2023-04-20  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-03-22  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/shared_ptr_atomic.h (atomic::operator=(nullptr_t)):
+	Add overload, as per LWG 3893.
+	* testsuite/20_util/shared_ptr/atomic/atomic_shared_ptr.cc:
+	Check assignment from nullptr.
+
+2023-04-20  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-03-29  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/std/expected (expected::value() &): Use const lvalue
+	for unex member passed to bad_expected_access constructor, as
+	per LWG 3843.
+
+2023-04-20  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-02-02  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/std/variant (variant::operator=): Implement resolution
+	of LWG 3585.
+	* testsuite/20_util/variant/lwg3585.cc: New test.
+
+2023-04-12  Patrick Palka  <ppalka@redhat.com>
+
+	Backported from master:
+	2023-04-12  Patrick Palka  <ppalka@redhat.com>
+
+	* src/c++17/floating_from_chars.cc: Include <algorithm>,
+	<iterator>, <limits> and <cstdint>.
+
+2023-03-30  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-03-29  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/109242
+	* include/std/optional (transform): Use std::remove_cv_t.
+	* testsuite/20_util/optional/monadic/pr109242.cc: New test.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-12-16  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/108118
+	* include/bits/shared_ptr_base.h (weak_ptr::operator=):
+	Implement as move-and-swap exactly as specified in the standard.
+	* testsuite/20_util/weak_ptr/cons/self_move.cc: New test.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-11-03  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/ranges_algobase.h (__detail::__copy_or_move):
+	Move output iterator.
+	* testsuite/25_algorithms/copy/constrained.cc: Check copying to
+	move-only output iterator.
+
+2023-03-28  Björn Schäpers  <bjoern@hazardy.de>
+
+	Backported from master:
+	2023-01-14  Björn Schäpers  <bjoern@hazardy.de>
+
+	* include/std/stacktrace (stacktrace_entry::_S_demangle): Use
+	raw __name if __cxa_demangle could not demangle it.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-12-12  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/std/stacktrace (operator<<): Only output to narrow
+	ostreams (LWG 3515).
+	* testsuite/19_diagnostics/stacktrace/synopsis.cc:
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-12-09  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/chrono.h (duration_cast, floor, round, abs, ceil)
+	(time_point_cast): Add [[nodiscard]] attribute and doxygen
+	comments.
+	(treat_as_floating_point): Add doxygen commen.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-12-09  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/chrono.h (duration, time_point): Change 'struct'
+	to 'class'.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-01-26  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/108554
+	* include/bits/stl_tree.h (_Rb_tree_insert_and_rebalance): Add
+	nonnull attribute.
+	(_Rb_tree_rebalance_for_erase): Add nonnull and returns_nonnull
+	attributes.
+	* testsuite/23_containers/map/modifiers/108554.cc: New test.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-09-23  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/std/bitset (bitset::_M_copy_to_string): Find set bits
+	instead of iterating over individual bits.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-09-15  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/shared_ptr_atomic.h (_GLIBCXX_TSAN_MUTEX_PRE_LOCK):
+	Replace with ...
+	(_GLIBCXX_TSAN_MUTEX_TRY_LOCK): ... this, add try_lock flag.
+	(_GLIBCXX_TSAN_MUTEX_TRY_LOCK_FAILED): New macro using
+	try_lock_failed flag
+	(_GLIBCXX_TSAN_MUTEX_POST_LOCK): Rename to ...
+	(_GLIBCXX_TSAN_MUTEX_LOCKED): ... this.
+	(_GLIBCXX_TSAN_MUTEX_PRE_UNLOCK): Remove invalid flag.
+	(_GLIBCXX_TSAN_MUTEX_POST_UNLOCK): Remove invalid flag.
+	(_Sp_atomic::_Atomic_count::lock): Use new macros.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-09-14  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/shared_ptr_atomic.h (_GLIBCXX_TSAN_MUTEX_DESTROY)
+	(_GLIBCXX_TSAN_MUTEX_PRE_LOCK, _GLIBCXX_TSAN_MUTEX_POST_LOCK)
+	(_GLIBCXX_TSAN_MUTEX_PRE_UNLOCK, _GLIBCXX_TSAN_MUTEX_POST_UNLOCK)
+	(_GLIBCXX_TSAN_MUTEX_PRE_SIGNAL, _GLIBCXX_TSAN_MUTEX_POST_SIGNAL):
+	Define macros for TSan annotation functions.
+	(_Sp_atomic::_Atomic_count): Add annotations.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-05-17  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/std/memory_resource (new_delete_resource): Add
+	nodiscard, returns_nonnull and const attributes.
+	(null_memory_resource): Likewise.
+	(set_default_resource, get_default_resource): Add returns_nonnull
+	attribute.
+	(memory_resource::is_equal): Add nodiscard attribute.
+	(operator==, operator!=): Likewise.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-09-14  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/std/future
+	(_State_baseV2::__setter(exception_ptr&, promise&)): Add
+	assertion for LWG 2276 precondition.
+	* testsuite/30_threads/promise/members/set_exception_neg.cc:
+	New test.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-09-08  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/c_global/cstddef (byte): Add always_inline attribute
+	to all operator overloads.
+	(to_integer): Add always_inline attribute.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-09-08  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/std/system_error (__adl_only::make_error_code): Add
+	deleted function.
+	(__adl_only::make_error_condition): Likewise.
+	(error_code::error_code(ErrorCodeEnum)): Add using-declaration
+	for deleted function.
+	(error_condition::error_condition(ErrorConditionEnum)):
+	Likewise.
+	* testsuite/19_diagnostics/error_code/cons/lwg3629.cc: New test.
+	* testsuite/19_diagnostics/error_condition/cons/lwg3629.cc: New test.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-05-17  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/ios_base.h (io_category): Add const and nodiscard
+	attributes.
+	(make_error_code, make_error_condition): Add nodiscard.
+	* include/std/future (future_category): Add const and nodiscard.
+	(make_error_code, make_error_condition): Add nodiscard.
+	* include/std/system_error (generic_category system_category):
+	Add nodiscard. Replace _GLIBCXX_CONST with C++11 attribute.
+	(error_code::value, error_code::category, error_code::operator bool)
+	(error_condition::value, error_condition::category)
+	(error_condition::operator bool, make_error_code)
+	(make_error_condition, operator==, operator!=, operator<=>): Add
+	nodiscard.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-05-13  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/std_thread.h (thread, thread::id): Improve
+	doxygen docs.
+	* include/std/future: Likewise.
+	* include/std/thread (jthread): Likewise.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-05-13  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/std/system_error: Improve doxygen comments.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-02-16  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/ext/throw_allocator.h: Use reserved names for
+	parameters.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2022-11-25  Jonathan Wakely  <jwakely@redhat.com>
+
+	* acinclude.m4 (GLIBCXX_CHECK_UCHAR_H): Don't use AC_MSG_RESULT
+	unless the AC_MSG_CHECKING happened.
+	* configure: Regenerate.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-01-12  Jonathan Wakely  <jwakely@redhat.com>
+
+	* doc/xml/manual/abi.xml: Add latest library versions.
+	* doc/html/manual/abi.html: Regenerate.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/char_traits.h (char_traits::copy): Return without
+	using memcpy if n==0.
+	(char_traits::assign): Likewise for memset.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/109299
+	* include/bits/basic_string.h (basic_string::_M_is_local()): Add
+	hint for compiler that local strings fit in the local buffer.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-03-01  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/cow_string.h: Fix typo in comment.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-02-16  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/experimental/optional: Fix header name in comment.
+
+2023-03-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backported from master:
+	2023-01-16  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/108413
+	* include/c_compatibility/stdatomic.h: Change copyright line to
+	be consistent with other headers contributed under DCO terms.
+	* include/std/expected: Add full stop to copyright line.
+
 2023-03-21  Matthias Kretz  <m.kretz@gsi.de>
 
 	Backported from master:
